assets/css/poppr.css
---
---
:root {
    --background-color: #303131;
    --font-color: #ffffff;
    --menu-color: #003f43c6;
    --toggle-menu: #BAB608;
    --scroll-postion: 0;
    --scroll-bar-height: 20px;
    --font: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    --font-size: 4vw;
    --font-shadow-color: #2979ff;
}

body {
    margin: 0;
    background-color: var(--background-color);
    z-index: -100;
    font-family: var(--font);
    scroll-behavior: smooth;
    overflow-x: hidden;
    font-size: var(--font-size);
}

body {
    &::-webkit-scrollbar {
        display: none;
    }

    -ms-overflow-style: none;
    /* IE and Edge */
    scrollbar-width: none;
    /* Firefox */
}


.section {
    height: 100vh;
    width: 100vw;
    color: var(--font-color);
    text-align: center;
    overflow: hidden;
    opacity: 0.8;
    background-color: transparent;
    display: grid;
    left: 0;
}


/*#big-text {
            justify-self: center;
        }

        #big-text h1 {
            font-size: 10em;
            margin: 0;
            justify-self: center;
        }

        #big-text h4 {
            font-size: 5em;
            margin: 0;
        }

        h1,
        p,
        ul {
            margin: 0;
        }*/

#gallery-container {
    display: flex;
    flex-wrap: nowrap;
    overflow-x: scroll;
    overflow-y: hidden;
    gap: 40px;
    transform: rotate(8deg);
    width: 120%;
    position: absolute;
    top: 120%;
    left: -10%;
    padding: 10vw;
    perspective: 600px;
}

#gallery-container {
    &::-webkit-scrollbar {
        display: none;
    }

    -ms-overflow-style: none;
    /* IE and Edge */
    scrollbar-width: none;
    /* Firefox */
}

.gallery-item-wrapper {
    flex: 0 0 auto;
    perspective: 400px;
    width: 40vw;
    aspect-ratio: calc(4/3);
    backface-visibility: hidden;
}

.gallery-item {
    width: inherit;
    aspect-ratio: inherit;
    border-radius: 40px;
    overflow: hidden;



    & div {
        width: 120%;
        height: 100%;
        background-size: cover;
        transition: scale 500ms ease-in-out 200ms;
    }

    &:hover div {
        scale: 1.05;
    }

    & ~ a {
        transition: top 500ms ease-in;
        top: 60%;
        position: absolute;
        font-size: 0.5em;
        opacity: 0;
        color: var(--font-color);
        text-shadow: 0 0 19px rgba(0, 0, 0, 0.674);
        transform: rotate(-8deg);
        text-decoration: none;
        text-align: center;
        width: 20vw;
        aspect-ratio: calc(4/3);
        transition: top 200ms ease-in, opacity 100ms ease-in;
    }

    &:hover ~ a, & ~a:hover {
        top: 50%;
        opacity: 1;
        transition: top 200ms ease-in, opacity 500ms ease-in;

    }
}

/*blob*/
@keyframes rotate {
    from {
        rotate: 0deg;
    }

    50% {
        scale: 1 1.5;
    }

    to {
        rotate: 360deg;
    }
}

#blob {
    background-color: white;
    height: 34vmax;
    aspect-ratio: 1;
    position: absolute;
    left: 50%;
    top: 50%;
    translate: -50% -50%;
    border-radius: 50%;
    background: linear-gradient(to right, aquamarine, mediumpurple);
    animation: rotate 20s infinite;
    opacity: 0.8;
    z-index: -4;
    filter: blur(12vmax);
}

#blur {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: -1;
    pointer-events: none;
}


#logo {
    position: fixed;
    top: 0;
    left: 0%;
    z-index: 10000;
}

#logo img {
    width: 20vw;
    margin: 10px;
}


.masthead {
    margin: 10px;
}

.masthead ul {
    text-decoration: none;
    list-style-type: none;
}

.typogram {
    perspective: 300px;
}

#video-container {
    position: absolute;
    top: 25%;
    left: 25%;
    z-index: -1;
    width: 50%;
    height: 50%;
    background-color: transparent;
    border-radius: 40px;
    padding: 20px;
}

#video-container {
    & div {
        position: absolute;
    }

    & div:first-child {
        font-size: 5vh;
    }

    & div:nth-child(2) {
        writing-mode: vertical-lr;
        text-orientation: upright;
        font-size: 2vw;
        top: 9vh;
    }

    & div:nth-child(3) {
        font-size: 10vw;
        top: 40%;
        left: 20%;
        z-index: 10;
    }

    & div:nth-child(4) {
        font-size: 2vw;
        top: 72%;
        left: 70%;
    }

    & div:nth-child(5) {
        font-size: 3vw;
        left: 60%;
    }

    & div:nth-child(6) {
        font-size: 2vw;
        left: 75%;
        top: 30%;
        writing-mode: vertical-lr;
    }

    & div:nth-child(7) {
        font-size: 2.5vw;
        top: 80%;
        left: 20%;
    }

    & div:hover, div:nth-child(3) {
        text-shadow: 0 0.2px 0 #ccc, 0 0.4px 0 #ccc,
            0 0.6px 0 var(--font-shadow-color), 0 0.8px 0 #ccc,
            0 1px 0 var(--font-shadow-color), 0 1.2px 0 #ccc,
            0 1.4px 0 var(--font-shadow-color), 0 1.6px 0 #ccc,
            0 1.8px 0 var(--font-shadow-color), 0 2px 0 #ccc,
            0 2.2px 0 var(--font-shadow-color), 0 2.4px 0 var(--font-shadow-color),
            0 2px 3px rgba(0, 0, 0, 0.5);
    }

    & div:active {
        text-shadow: none;
    }
}


#toggle-menu {
    border-radius: 100%;
    background-color: var(--toggle-menu);
    aspect-ratio: 1;
    width: 5vw;
    position: fixed;
    right: 10px;
    top: 10px;
    z-index: 101;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;

    & i {
        font-size: 3vw;
    }
}

#menu {
    position: fixed;
    width: 100%;
    height: 100%;
    top: -100%;
    z-index: 100;
    background-color: var(--menu-color);
}

#menu-items-container {
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    backdrop-filter: blur(10px);

    & a {
        display: block;
        padding: clamp(0.25em, 1vmin, 1em) clamp(1em, 4vmin, 4em);
        font-size: clamp(2em, 8vw, 7em);
        text-decoration: none;
        color: var(--font-color);
        /*border-top: 1px solid rgba(255, 255, 255, 0.5);

                &:last-child {
                    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
                }*/

        & span {
            opacity: 0;
            display: inline-block;
        }
    }

    & a:hover {
        color: rgb(41, 121, 255);
    }

    & a:hover span:first-child {
        transform: translate(-40%, 30%) rotate(8deg);
    }

    & a:hover span:nth-child(2) {
        transform: translate(-20%, 20%) rotate(4deg);
    }

    & a:hover span:nth-child(3) {
        transform: translate(-10%, -30%) rotate(-6deg);
    }

    & a:hover span:nth-child(4) {
        transform: translate(0%, 8%) rotate(-8deg);
    }
}

#menu-items-container:has(a:hover) a:not(a:hover) {
    opacity: 0.5;
}

.hide {
    display: none !important;
}

#scroll-bar {
    position: fixed;
    width: 3px;
    height: var(--scroll-bar-height);
    right: 1px;
    top: var(--scroll-postion);
    background-color: aqua;
    opacity: 0;
}


























/*==================================================================================================
media query
====================================================================================================*/

@media only screen and (min-width: 1280px) {}

